# CV_RTC

./: .gitignore  README.md
1LAB/: .gitignore  main.cpp  untitled8.pro.user.36a73dc
1LAB/Main/: main.cpp
1LAB/dop_v1/: main.cpp
1LAB/dop_v3/: main.cpp
1LAB/dop_v4/: CV_LAB1_4.pro  main.cpp
2LAB/: 2LAB.pro  main.cpp
3LAB/: CMakeLists.txt  main.cpp  task_1.cpp  task_1.h  task_2.cpp  task_2.h  task_3.cpp  task_3.h  task_4.cpp  task_4.h
4LAB/: CMakeLists.txt  main.cpp
5LAB/: CMakeLists.txt  calib.txt  calibrate_camera_charuco  calibration.xml  create_board_charuco  detect_board_charuco  main.cpp  task_1.cpp  task_1.h  task_3.cpp  task_3.h  task_4.cpp  task_4.h
5LAB/src/: cube.cpp  cube.h  main.cpp
CV_1LAB/: main.cpp
aruco_samples_build/: CMakeLists.txt
project_template/: main.cpp
